manuscript v1.4.1 (moved tables & figures to end for Ibis guidelines)

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -39,15 +39,11 @@ The study was conducted over the course of three months (13 weeks), from the fir
 
 The entire forest stretch---with the exception of some parts either too disturbed or having restricted access---was effectively covered by selecting 32 non-random, evenly distributed circular sampling points of 30 m radius (Figure 1). The total forest area under consideration was thus around 400 ha, while the absolute cumulative area covered by the sampling points was approximately 9 ha, as they were chosen such that each point was at least 250 m away from its neighbours (although this was lowered to 200 m in three cases). Clear cuts were avoided as much as possible. We ensured that the selected set of points represented sufficiently well the natural range and diversity of habitat characteristics in the forest.
  
-![Map showing 32 sampling points evenly distributed over the study area: Branišovský les, Czech Republic.](map_studyarea.png)
-
 ## Habitat surveys
 
 Vegetation features thought to be relevant to birds in the post-breeding period were selected and measured to initially characterise the various habitat patches. The habitat class of each sampling point was recorded as ‘Interior’, ‘Road’ or ‘Edge’ according to whether or not asphalt roads and forest-to-farmland transitions occurred within 150 m from the centre of the point. This was done using an aerial map (Mapy.cz) in which asphalt roads, farmlands and forests are all clearly visible and distinguishable. At each of the 32 points, the tree, shrub and herb species were identified, and the vertical strata to which they belonged were noted. The species information was used to calculate plant species richness and diversity (Shannon’s diversity index; Shannon, 1948). Regardless of taxonomic and functional identity, plants of height $\le$ 1 m above the ground classified into the ‘Herb’ layer (this therefore included both woody- [like *Rubus*] and non-woody stemmed [like graminoids] plants, but did not exclude graminoid leaves that extended beyond 1 m from the ground); plants 1--4 m in height belonged to the ‘Understorey’ (this included shrubs like *S. aucuparia* and *F. alnus* as well as young individuals of trees like *P. abies*); and plants $\ge$ 4 m in height belonged to the ‘Canopy’ (this occasionally included *S. aucuparia*). Counts of ‘Canopy’ and ‘Understorey’ plants were taken and used to calculate density per 100 m^2. Counts were not taken for the ‘Herb’ layer due to the difficulty in some cases in determining what constitutes a single stem and since it is unlikely that birds track ground layer vegetation at the level of individual stems. Instead, the species that covered $\gt$ 50% of the ground was considered to be the ‘Dominant Ground Vegetation’ (in some cases, this was moss) and this variable was also used in analyses. In addition, presence or absence of moss in the point was noted separately regardless of whether or not it was the dominant ground layer vegetation, as its presence usually indicates the quality of and disturbance within the forest patch (Berdugo et al., 2018; Cornelissen et al., 2007).
 
 We also calculated the proportion of deciduous tress in the 'Canopy' as this has been shown to be a more important factor than measures of tree diversity (Berg, 1997). Canopy cover at a sampling point was measured using canopy photographs taken at three equidistant sub-points within 10--15 m of the centre, which were then analysed using ImageJ software (Rasband, 1997) by converting to binary black-and-white images and calculating the percentage of cover across the whole image (see Forester, 2011; Figure S1). The measurements from each sub-point were averaged to represent mean canopy cover of a point, while the standard deviation of the three values represented the heterogeneity in canopy cover in the point (high values signifying high heterogeneity). These measurements were taken once in each sampling week. Since most deciduous trees bore leaves even in the last week of sampling, the 13 weekly measurements of both mean canopy cover and canopy heterogeneity for each sampling point were averaged to provide more accurate measures of both. Lastly, phenological characteristics of leaves, flowers and fruits of the plants in each point were also recorded weekly on an ordinal scale in order to track fruiting, flowering and leaf senescence patterns across the study period. 
-
-***Table 1: The continuous measure of time (Week) used to test for patterns in habitat selection, with corresponding weeks (starting on Monday) in the Gregorian calendar.***
 
 ## Bird counts
 
@@ -69,29 +65,17 @@ At the next level of response, we investigated whether foraging guilds differed 
 
 A total of 7,367 detections of 69 bird species were made, of which 62% (4527) did not meet the criteria for inclusion in the analysis. Of the 2,840 detections of 45 species anlaysed, 78% (2,209) were purely auditory, 7% (201) were purely visual and 15% (430) were both, and this did not change majorly with weeks or across points (Figure S3). The average number of detections per point count varied from 5 in Week 1 to 9 in Week 13 (Figure 2). Among 494 records of birds foraging, just two were of frugivory. 
  
-***Figure 2: The trends in bird detections per point count with season and habitat. (A) Large circular dots represent mean bird detections per point count for each week averaged over all sampling points. Whiskers represent 95% confidence intervals (CIs). (B) Thick horizontal bars within boxes represent median value of bird detections per point count for each point over all sampling weeks. Top and bottom box hinges are the 1st and 3rd quartiles respectively (25th and 75th percentiles). Respective whisker ends are distances to data points ≤ 1.5 × IQR (interquartile range) from respective hinges. Small circular dots are data points ≥ 1.5 × IQR from hinges (outliers).***
-
 ## Habitat selection in forest birds
 
 The final model was a GLMM with Poisson error distribution and log link function fitted with the BOBYQA optimiser (Table 2). It contained total bird abundance as response, and crossed random effects of sampling point and day. The predictors selected as important were observer (detections had 71:29 observer ratio), week, canopy heterogeneity, tree density, and dominant ground vegetation and its interaction with week. 
 
-***Table 2: GLMMs using abundance of all birds as the response. Models at each step of term addition/deletion are shown (as ‘all.x’) with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. ‘CH’: canopy heterogeneity; ‘TD’: tree density; ‘DOM’: dominant ground vegetation. Selected model, ‘all.6’: bird abundance ~ observer + (1|point) + (1|day) + week + log(canopy heterogeneity) + log(tree density) + ground vegetation + week:(ground vegetation)***
-
 There was an overall increase in bird abundance towards the end of the study period in all sampling points---across the five categories of ground vegetation---but the magnitude of increase was starkly different in each. Points with *Rubus* sp. and those with *Vaccinium* sp. as the dominant ground vegetation had intermediate values of both average abundance and increase in abundance with time. Points with graminoids in the ground layer had the lowest overall abundance as well as the lowest increase (Figure 3). Points with ground layers comprising moss and bare ground (category ‘Bare’) both had low abundances in the beginning but towards the end had the highest abundances, i.e., they showed the strongest increases. Bird abundance related positively and negatively with log-transformed variables of canopy heterogeneity and tree density respectively (Figure 3) and these trends did not change noticeably over the course of the study period. 
-
-***Figure 3: Abundance of all species of birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘all.6’. (A) Coloured lines show mean abundances changing with weeks on X-axis. Coloured ribbons around the lines represent 95% CIs. (B) Large circular dots represent mean bird abundance per point count. Whiskers represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13. (C, D) Coloured lines show mean abundances and corresponding ribbons represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13.***
 
 ## Habitat selection in forest bird guilds
 
 Habitat selection was very different in invertebrate-feeders and in omnivores (Table 3). The final model in the former case was a Poisson GLMM (log link) with observer, proportion of deciduous trees and dominant ground vegetation as important fixed effects, with no main effect or interaction term of week. Point ID was included as a random effect. Although the dominant ground vegetation was a useful predictor, the only deviant group was ‘Graminoids’; such sampling points tended to have lower abundance of invertebrate-feeding birds than points with other ground layers (Figure 4). Abundance decreased with proportion of deciduous trees and notably, a polynomial term did not give a better fit, although mixed forests with intermediate proportions of deciduous trees are believed to have higher diversity and abundance. Neither of the two trends changed detectably with time.
 
 For omnivores, the final model was a negative binomial GLMM (log link) also containing just one random effect, of point. Observer, week, habitat class, tree density and canopy heterogeneity along with its interaction with week were all important and contributed to model parsimony. Omnivore abundance also increased as the season progressed, but overall abundance was higher in forest edges than in forest interiors or roadside patches (Figure 5). This trend did not interact with week. Omnivore abundance decreased with tree density but showed interesting trends with canopy heterogeneity. Initially, the trend appeared to be slightly negative yet almost insignificant, but with every week the trend became more and more positive, such that in week 13 it was very strong: omnivores seemed to be very abundant in highly heterogenous points, while abundances did not change over the weeks in relatively homogenous points (Figure 5). 
-
-***Table 3: GLMMs of guild abundances with habitat variables. Model names ‘inv.x’ refer to invertebrate-feeder models while names ‘omn.x’ refer to omnivore models. Models at each step of term addition/deletion are shown with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. ‘sTPD’: scaled proportion of deciduous trees; ‘DOM’: dominant ground vegetation; ‘HC’: habitat class; ‘CH’: canopy heterogeneity; ‘TD’: tree density.***
- 
-***Figure 4: Abundance of invertebrate-feeding birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘inv.4’. (A) Large circular dots represent mean abundance per point count. Whiskers represent 95% CIs. (B) Line shows mean abundances and corresponding ribbon represents 95% CIs. X-axis shows proportions scaled from original range of 0–100%.***
- 
-***Figure 5: Abundance of omnivorous birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘omn.3’. Dark orange colour represents Week 1, pink colour represents Week 7 and dark blue represents Week 13. (A) Large circular dots represent mean abundance per point count. Whiskers represent 95% confidence intervals. (B, C) Coloured lines show mean abundances and corresponding ribbons represent 95% CIs.***
 
 # Discussion
 
@@ -213,6 +197,24 @@ Habitat selection is a fundamental part of the ecology of organisms. Selection o
 There was a general increase in bird abundance caused by the arrival of northern migrants. In addition, I found varying degrees of habitat selection at different levels. Overall bird abundance was driven by a combination of structural characteristics and species composition of the vegetation. However, the two guilds showed different resource use strategies. Invertebrate-feeding birds only cared about one major characteristic, but were highly specific and consistent about it: they avoided oak-dominated homogeneous patches of forest and preferred spruce patches with heterogeneity. On the other hand, omnivores were affected by a larger interplay of factors and their patterns changed with time (with the arrival of migrants): they had a slight preference for forest edges with low densities of trees and this remained constant with time, but they formed an additional strong preference for highly heterogeneous areas as the season progressed. While there is no evidence to show that birds stopped feeding on arthropods, there was a marked decline in predation rates on the artificial caterpillars, which can be assumed to imperfectly mirror patterns of decline in predation of true lepidopteran prey. However, the trend seemed to be rising back up towards the end of the study, which provides a very interesting point for further inquiry.
 
 Thus, the poorly-studied topic of habitat selection in post-breeding temperate forest birds and their corresponding foraging strategies is a very promising avenue to lead future research down. It can lead to valuable insights on the interactions of these birds with their natural environment during stressful periods, and can possibly suggest recommendations on the right action to take in order to make and maintain these heavily managed and exploited habitats suitable to them.
+
+# Tables and figures
+
+![Map showing 32 sampling points evenly distributed over the study area: Branišovský les, Czech Republic.](map_studyarea.png)
+
+***Table 1: The continuous measure of time (Week) used to test for patterns in habitat selection, with corresponding weeks (starting on Monday) in the Gregorian calendar.***
+
+***Figure 2: The trends in bird detections per point count with season and habitat. (A) Large circular dots represent mean bird detections per point count for each week averaged over all sampling points. Whiskers represent 95% confidence intervals (CIs). (B) Thick horizontal bars within boxes represent median value of bird detections per point count for each point over all sampling weeks. Top and bottom box hinges are the 1st and 3rd quartiles respectively (25th and 75th percentiles). Respective whisker ends are distances to data points ≤ 1.5 × IQR (interquartile range) from respective hinges. Small circular dots are data points ≥ 1.5 × IQR from hinges (outliers).***
+
+***Table 2: GLMMs using abundance of all birds as the response. Models at each step of term addition/deletion are shown (as ‘all.x’) with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. ‘CH’: canopy heterogeneity; ‘TD’: tree density; ‘DOM’: dominant ground vegetation. Selected model, ‘all.6’: bird abundance ~ observer + (1|point) + (1|day) + week + log(canopy heterogeneity) + log(tree density) + ground vegetation + week:(ground vegetation)***
+
+***Figure 3: Abundance of all species of birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘all.6’. (A) Coloured lines show mean abundances changing with weeks on X-axis. Coloured ribbons around the lines represent 95% CIs. (B) Large circular dots represent mean bird abundance per point count. Whiskers represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13. (C, D) Coloured lines show mean abundances and corresponding ribbons represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13.***
+
+***Table 3: GLMMs of guild abundances with habitat variables. Model names ‘inv.x’ refer to invertebrate-feeder models while names ‘omn.x’ refer to omnivore models. Models at each step of term addition/deletion are shown with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. ‘sTPD’: scaled proportion of deciduous trees; ‘DOM’: dominant ground vegetation; ‘HC’: habitat class; ‘CH’: canopy heterogeneity; ‘TD’: tree density.***
+ 
+***Figure 4: Abundance of invertebrate-feeding birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘inv.4’. (A) Large circular dots represent mean abundance per point count. Whiskers represent 95% CIs. (B) Line shows mean abundances and corresponding ribbon represents 95% CIs. X-axis shows proportions scaled from original range of 0–100%.***
+ 
+***Figure 5: Abundance of omnivorous birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘omn.3’. Dark orange colour represents Week 1, pink colour represents Week 7 and dark blue represents Week 13. (A) Large circular dots represent mean abundance per point count. Whiskers represent 95% confidence intervals. (B, C) Coloured lines show mean abundances and corresponding ribbons represent 95% CIs.***
 
 
 
